fixed transform: scale blurring the text

--- a/styles.css
+++ b/styles.css
@@ -247,11 +247,15 @@ button:hover, a svg:hover {
     gap: var(--global-gap);
 }
 
+.project-card, .ann, .profile {
+    transform: scale(0.99);
+}
+
 .project-card:hover, .ann:hover, .profile:hover {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
     transition: all 0.2s;
     outline: 2px solid lightblue;
-    transform: scale(1.01, 1.01);
+    transform: translateZ(0) scale(1) ;
 }
 
 .project-card p, .profile p {
